# timelapse-creator

./: CMakeLists.txt  LICENSE  build.sh
include/: cli-parser.hpp
src/: cli-parser.cpp  main.cpp
